<resources>
    <string name="app_name">city</string>
    <string name="title">Название</string>
    <string name="main_problem">Основная проблема</string>
    <string name="date">Дата</string>
    <string name="calendar">Календарь</string>
    <string name="description">Описание</string>
    <string name="location">Локация</string>
    <string name="map">Карта</string>
    <string name="select_on_map">Выберите на карте</string>
    <string name="select_in_calendar">Выберите в календаре</string>
    <string name="submit">Отправить</string>
    <string name="mail">Почта</string>
    <string name="password">Пароль</string>
    <string name="registration_text">У вас нет аккаунта? Зарегистрируйтесь</string>
    <string name="signIn">Войти</string>
    <string name="login">Логин</string>
    <string name="signUp">Зарегистрироваться</string>
    <string name="error">Ошибка</string>
    <string name="addMarkerOnMapQuestion">Добавить выбранное местоположение?</string>
    <string name="no">Нет</string>
    <string name="yes">Да</string>
    <string name="add_photo">Добавьте фото</string>
    <string name="enter_empty_field">Заполните пустые поля</string>
    <string name="get_address_error">Местоположение не определено. Попробуйте еще раз</string>
    <string name="statusIs">Статус - %1$s</string>
    <string name="range_answers">РАСПРЕДЕЛЕНИЕ ОТВЕТОВ:</string>
    <string name="count_of_answers">Всего ответов: %1$d</string>
    <string name="answers_percent">Ответов: %1$d - %2$d</string>
    <string name="to_vote">ПРОГОЛОСОВАТЬ</string>
    <string name="name_of_idea">Название идеи</string>
    <string name="wait_ideas">Ждём ваши идеи</string>
    <string name="success">Успешно</string>
</resources>
